Complete testing with 87% of coverage checked using Jacoco